--- a/joop/src/main/resources/static/style/style.css
+++ b/joop/src/main/resources/static/style/style.css
@@ -7,3 +7,15 @@ ul {
     cursor: default;
     color: darkgray;
 }
+
+.sortorder:after {
+  content: '\25b2';
+}
+
+.sortorder.reverse:after {
+  content: '\25bc';
+}
+
+.table-link {
+    cursor: pointer;
+}
